添加超级用户功能

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 OPENAI_API_BASE_URL="https://closeai.deno.dev"
 OPENAI_API_ORG="org-xxxxxxxxxxxxxxx"
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxx"
-OPENAI_API_MODEL="gpt-3.5-turbo"
 
 # 站点标题
 SITE_LANG="zh-CN"
@@ -11,3 +10,4 @@ SITE_KEYWORDS="ai,api,openai,chatgpt,gpt-3,gpt-3.5-turbo,对话,聊天"
 
 # 简易用户权限
 ANONYMOUS_USER_PASSWORD=""
+SUPER_USER_PASSWORD=""
