--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@tippyjs/react": "^4.2.6",
-    "@uiw/react-md-editor": "^3.20.6",
     "ahooks": "^3.7.6",
     "astro": "^2.1.8",
     "classnames": "^2.3.2",
@@ -32,13 +31,13 @@
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "vditor": "^3.9.1"
   },
   "devDependencies": {
     "@astrojs/node": "^5.1.0",
     "@astrojs/react": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.11",
