解耦私有百度统计代码

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SITE_TITLE="与 AI 对话"
 SITE_DESCRIPTION="一个与 AI 聊天的应用"
 SITE_KEYWORDS="ai,api,openai,chatgpt,gpt-3,gpt-3.5-turbo,对话,聊天"
 
+# 百度统计代码
+BAIDU_API_KEY=""
+
 # 简易用户权限
 ANONYMOUS_USER_PASSWORD=""
 SUPER_USER_PASSWORD=""
