--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,11 @@
     "no-promise-executor-return": "off",
     "no-param-reassign": "off",
     "no-use-before-define": "off",
+    "no-useless-constructor": "off",
     "no-plusplus": "off",
     "consistent-return": "off",
+    "arrow-body-style": "off",
+    "max-classes-per-file": "off",
     "no-void": "off",
     "prettier/prettier": "error",
     "import/no-unresolved": 0,
