--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@nozbe/watermelondb": "^0.25.5",
     "@tippyjs/react": "^4.2.6",
     "ahooks": "^3.7.6",
     "astro": "^2.2.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-router-dom": "^6.10.0",
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
