--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@chat/*": ["src/apps/chat/*"]
-    }
+    },
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
