--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint --fix --quiet --ext .js,.ts,.tsx,.astro ."
   },
   "dependencies": {
+    "@ai-chat/fake-db": "workspace:*",
+    "@ai-chat/openai": "workspace:*",
+    "@ai-chat/shared": "workspace:*",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
-    "@nozbe/watermelondb": "^0.25.5",
     "@tippyjs/react": "^4.2.6",
     "ahooks": "^3.7.6",
     "astro": "^2.2.0",
@@ -35,6 +37,7 @@
     "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
     "tippy.js": "^6.3.7",
+    "uuid": "^9.0.0",
     "vditor": "^3.9.1"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@types/react-scroll": "^1.8.6",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "astro-eslint-parser": "^0.13.2",
