--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
+    "react-use": "^17.4.0",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "vditor": "^3.9.1"
