添加 react 和 fake-db 的胶水层

--- a/libraries/fake-db/package.json
+++ b/libraries/fake-db/package.json
@@ -4,6 +4,12 @@
   "version": "0.0.1",
   "description": "Fake DB based on web storage",
   "main": "./index.ts",
+  "peerDependencies": {
+    "react": "latest"
+  },
+  "dependencies": {
+    "react-use": "^17.4.0"
+  },
   "engines": {
     "node": ">=18.12.1"
   },
