--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "lint": "eslint --fix --quiet --ext .js,.ts,.tsx,.astro ."
   },
   "dependencies": {
+    "@ai-chat/chat-ui": "workspace:*",
     "@ai-chat/fake-db": "workspace:*",
     "@ai-chat/openai": "workspace:*",
-    "@ai-chat/chat-ui": "workspace:*",
     "@ai-chat/shared": "workspace:*",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tippyjs/react": "^4.2.6",
     "ahooks": "^3.7.6",
-    "astro": "^2.2.0",
+    "astro": "^2.2.1",
     "avvvatars-react": "^0.4.2",
     "classnames": "^2.3.2",
     "highlight.js": "^11.7.0",
@@ -33,11 +34,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
     "react-timeago": "^7.1.0",
     "react-use": "^17.4.0",
+    "redux": "^4.2.1",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "vditor": "^3.9.1"
@@ -49,14 +52,14 @@
     "@types/lodash-es": "^4.17.7",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "@types/react-scroll": "^1.8.6",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "astro-eslint-parser": "^0.13.2",
-    "eslint": "^8.37.0",
+    "astro-eslint-parser": "^0.13.3",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-astro": "^0.26.1",
@@ -68,7 +71,7 @@
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
     "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   },
   "packageManager": "pnpm@8.0.0",
   "pnpm": {
