--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 OPENAI_API_BASE_URL="https://closeai.deno.dev"
-OPENAI_API_ORG="org-xxxxxxxxxxxxxxx"
+OPENAI_ORGANIZATION="org-xxxxxxxxxxxxxxx"
 OPENAI_API_KEY="sk-xxxxxxxxxxxxxxx"
 
 # 站点标题
