--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "airbnb-base", "prettier"],
+  "extends": ["eslint:recommended", "prettier"],
   "plugins": ["import", "prettier"],
   "rules": {
     "@typescript-eslint/ban-ts-comment": "off",
