--- a/package.json
+++ b/package.json
@@ -24,13 +24,7 @@
     "astro": "^2.2.1",
     "avvvatars-react": "^0.4.2",
     "classnames": "^2.3.2",
-    "highlight.js": "^11.7.0",
-    "katex": "^0.16.4",
     "lodash-es": "^4.17.21",
-    "markdown-it": "^13.0.1",
-    "markdown-it-highlightjs": "^4.0.1",
-    "markdown-it-katex": "^2.0.3",
-    "markdown-it-kbd": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -38,7 +32,6 @@
     "react-router-dom": "^6.10.0",
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
-    "react-timeago": "^7.1.0",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "tippy.js": "^6.3.7",
@@ -50,7 +43,6 @@
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
@@ -60,7 +52,6 @@
     "@typescript-eslint/parser": "^5.57.1",
     "astro-eslint-parser": "^0.13.3",
     "eslint": "^8.38.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-astro": "^0.26.1",
     "eslint-plugin-import": "^2.27.5",
@@ -71,6 +62,7 @@
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
     "tailwindcss": "^3.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "packageManager": "pnpm@8.0.0",
