--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@ai-chat/fake-db": "workspace:*",
     "@ai-chat/openai": "workspace:*",
     "@ai-chat/shared": "workspace:*",
+    "@ai-chat/vditor": "workspace:*",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
     "@tippyjs/react": "^4.2.6",
     "ahooks": "^3.7.6",
-    "astro": "^2.2.1",
+    "astro": "^2.2.2",
     "avvvatars-react": "^0.4.2",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
@@ -36,8 +37,7 @@
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "tippy.js": "^6.3.7",
-    "uuid": "^9.0.0",
-    "vditor": "^3.9.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@astrojs/node": "^5.1.1",
@@ -45,12 +45,12 @@
     "@astrojs/tailwind": "^3.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.34",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-scroll": "^1.8.6",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "astro-eslint-parser": "^0.13.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
