--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,21 @@
 {
   "version": "0.2.0",
   "configurations": [
-   {
-    "command": "pnpm dev",
-    "name": "Development server",
-    "request": "launch",
-    "type": "node-terminal"
-   }
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome against localhost",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}",
+      "preLaunchTask": "serve"
+    },
+    {
+      "type": "msedge",
+      "request": "launch",
+      "name": "Launch Edge against localhost",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}",
+      "preLaunchTask": "serve"
+    }
   ]
- }
+}
