--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-contexify": "^6.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
