--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,10 @@
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": 0
   },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2021
+  },
   "overrides": [
     {
       "files": ["*.astro"],
