--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -15,13 +15,13 @@ dictionaries:
   - filetypes
 words:
   - appbar
-  - ahooks
   - astro
   - astrojs
   - attributify
   - autosize
   - avvvatars
   - chatgpt
+  - clsx
   - cognitiveservices
   - contexify
   - csstype
