--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@ai-chat/openai": "workspace:*",
     "@ai-chat/shared": "workspace:*",
     "@ai-chat/vditor": "workspace:*",
-    "@headlessui/react": "^1.7.13",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
     "@tippyjs/react": "^4.2.6",
-    "ahooks": "^3.7.6",
-    "astro": "^2.2.2",
+    "astro": "^2.3.0",
     "avvvatars-react": "^0.4.2",
-    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "eventsource-parser": "^1.0.0",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-contexify": "^6.0.0",
@@ -36,11 +36,11 @@
     "react-scroll": "^1.8.9",
     "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
-    "redux": "^4.2.1",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@astrojs/deno": "^4.1.0",
     "@astrojs/node": "^5.1.1",
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
